# newlib

./: .bintray_descriptor.json  .gitignore  .travis.yml  config.sub  tests.sh
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  newlib.cron.d.ex  newlib.default.ex  newlib.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
libgloss/aarch64/: configure  configure.in  syscalls.c
newlib/: configure.host
newlib/libc/include/sys/: signal.h  types.h
newlib/libc/stdlib/: mallocr.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/hermit/: Makefile.am  Makefile.in  _exit.c  chown.c  close.c  configure  configure.in  crt0.asm  crt0.c  crti.S  crtn.S  environ.c  execve.c  fork.c  fstat.c  getpid.c  gettod.c  init.c  isatty.c  kill.c  link.c  lseek.c  open.c  read.c  readlink.c  sbrk.c  signal.c  stat.c  symlink.c  syscall.h  times.c  unlink.c  wait.c  write.c
newlib/libc/sys/hermit/include/sys/: errno.h
newlib/libc/sys/hermit/sys/: fcntl.h  ucontext.h
